fixing the clojure icon, too small

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -32,7 +32,7 @@ p {
 /* resize images */
 .icon img {
     padding-left: 80px;
-    width: 6%;
+    width: 8%;
     height: auto;
     float: left;
 
